Got exercise done and made extensive comments. Send help

--- a/src/index.html
+++ b/src/index.html
@@ -13,8 +13,8 @@
     <input id="message" type="text">
     <!-- Put article tags in a div to use as the flexbox container -->
     <div class="container">
-        <article id="first_article">Placeholder</article>
-        <article id="second_article">Placeholder</article>
+        <article id="first_article">One</article>
+        <article id="second_article">Two</article>
     </div>
     <script src="scripts/main.js"></script>
 </body>
